SERVER-25366 Fix killOp arguments sent by the mongo shell on exit.